fix markup and styles to demo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 	<header class="header">
 		<h1>Parallax Effect Demo</h1>
 	</header>
-	<section class="content-row parallax" data-friction="20">
+	<section class="content-row">
 		<h2>Section Heading</h2>
+		<div class="parallax-layout parallax" data-friction="0.02" style="background-image: url(images/image.jpg)"></div>
 	</section>
 	<section class="content-row">
 		<h2>Section Heading</h2>
 	</section>
-	<section class="content-row parallax" data-friction="30">
+	<section class="content-row">
 		<h2>Section Heading</h2>
-		<div class="parallax-layout" style="background-image: url(images/image.jpg)"></div>
+		<div class="parallax-layout parallax" data-friction="0.02" style="background-image: url(images/image.jpg)"></div>
 	</section>
 	<section class="content-row">
 		<h2>Section Heading</h2>
